--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-spinners": "^0.8.1",
+    "react-toastify": "^6.0.0-rc.0",
     "styled-components": "^5.1.0"
   },
   "scripts": {
